--- a/articles/active-directory/saas-apps/toc.yml
+++ b/articles/active-directory/saas-apps/toc.yml
@@ -1411,7 +1411,7 @@
           href: salesforce-tutorial.md
         - name: Salesforce Sandbox
           href: salesforce-sandbox-tutorial.md
-        - name: Samanage
+        - name: SolarWinds 服务台（以前称为 Samanage）
           href: samanage-tutorial.md
         - name: SAML 1.1 Token enabled LOB App
           href: saml-tutorial.md
@@ -2070,7 +2070,7 @@
           href: salesforce-provisioning-tutorial.md
         - name: Salesforce Sandbox
           href: salesforce-sandbox-provisioning-tutorial.md
-        - name: Samanage
+        - name: SolarWinds 服务台（以前称为 Samanage）
           href: samanage-provisioning-tutorial.md
         - name: SAP Analytics Cloud
           href: sap-analytics-cloud-provisioning-tutorial.md
