--- a/articles/iot-central/core/TOC.yml
+++ b/articles/iot-central/core/TOC.yml
@@ -10,6 +10,8 @@
       href: overview-iot-central-developer.md
     - name: 最新更新
       items:
+        - name: 2020 年 8 月新增功能和更新的功能
+          href: 'https://azure.microsoft.com/updates/azure-iot-central-feature-updates-august-2020/'
         - name: 2020 年 7 月新增功能和更新的功能
           href: 'https://azure.microsoft.com/updates/azure-iot-central-feature-updates-july-2020/'
         - name: 2020 年 6 月新增功能和更新的功能
