--- a/articles/lighthouse/index.yml
+++ b/articles/lighthouse/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: JnHs
   ms.author: jenhayes
   ms.date: 07/20/2020
-  ms.openlocfilehash: 40352965db20c12e589f52f76869032d1f5f1b10
-  ms.sourcegitcommit: d18a59b2efff67934650f6ad3a2e1fe9f8269f21
+  ms.openlocfilehash: b7f8a44b8e2d049a2a558b9a78d896ac638f5d1c
+  ms.sourcegitcommit: 80b9c8ef63cc75b226db5513ad81368b8ab28a28
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/20/2020
-  ms.locfileid: "88659868"
+  ms.lasthandoff: 09/16/2020
+  ms.locfileid: "90603180"
 landingContent:
 - title: 关于 Azure Lighthouse
   linkLists:
@@ -35,6 +35,8 @@ landingContent:
     links:
     - text: 将客户加入 Azure Lighthouse
       url: ./how-to/onboard-customer.md
+    - text: 关联 ID 以获取合作伙伴获得的额度
+      url: ./how-to/partner-earned-credit.md
   - linkListType: concept
     links:
     - text: 建议的安全做法
@@ -85,6 +87,8 @@ landingContent:
       url: ./how-to/policy-at-scale.md
     - text: 部署可修正的策略
       url: ./how-to/deploy-policy-remediation.md
+    - text: 利用 Azure Arc 管理混合计算机
+      url: ./how-to/manage-hybrid-infrastructure-arc.md
 - title: 参考 - SDK
   linkLists:
   - linkListType: reference
