--- a/articles/migrate/toc.yml
+++ b/articles/migrate/toc.yml
@@ -28,8 +28,6 @@
           href: tutorial-discover-physical.md
         - name: 发现 AWS 实例
           href: tutorial-discover-aws.md
-        - name: 发现导入的服务器
-          href: tutorial-discover-import.md
     - name: 评估
       items:
         - name: 评估 VMware VM 以便迁移到 Azure VM
@@ -42,7 +40,9 @@
           href: tutorial-assess-physical.md
         - name: 评估 AWS 实例以便迁移到 Azure
           href: tutorial-assess-aws.md
-    - name: 迁移
+        - name: 评估导入的服务器
+          href: tutorial-discover-import.md
+    - name: Migrate
       items:
         - name: 迁移 VMware VM
           items:
@@ -160,7 +160,7 @@
           href: how-to-migrate-at-scale.md
         - name: 迁移示例（Contoso 系列）
           href: contoso-migration-overview.md
-- name: 故障排除
+- name: 疑难解答
   items:
     - name: 排查 Azure Migrate 问题
       href: troubleshoot-general.md
