--- a/articles/azure-portal/TOC.yml
+++ b/articles/azure-portal/TOC.yml
@@ -31,6 +31,8 @@
       href: set-preferences.md
     - name: 对收藏夹执行添加、删除和排序操作
       href: azure-portal-add-remove-sort-favorites.md
+    - name: 查看和筛选资源信息
+      href: manage-filter-resource-views.md
     - name: 创建 Azure 仪表板
       items:
         - name: 创建并共享 Azure 仪表板
