--- a/articles/container-instances/index.yml
+++ b/articles/container-instances/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: dlepow
   ms.author: danlep
   ms.date: 09/25/2019
-  ms.openlocfilehash: 6de3e2dfb84ecd705f5faa1cfdd905c429671e27
-  ms.sourcegitcommit: e71da24cc108efc2c194007f976f74dd596ab013
+  ms.openlocfilehash: 8dd403d9c1b2996c70c8d387e5305d2c8749bce8
+  ms.sourcegitcommit: 7374b41bb1469f2e3ef119ffaf735f03f5fad484
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "87415765"
+  ms.lasthandoff: 09/16/2020
+  ms.locfileid: "90705191"
 landingContent:
 - title: 关于 Azure 容器实例
   linkLists:
@@ -39,7 +39,7 @@ landingContent:
     - text: 部署容器实例 - ARM 模板
       url: container-instances-quickstart-template.md
     - text: 部署容器实例 - Docker CLI
-      url: container-instances-quickstart-docker-cli.md
+      url: quickstart-docker-cli.md
   - linkListType: learn
     links:
     - text: 通过 Azure 容器实例运行 Docker 容器
@@ -52,6 +52,8 @@ landingContent:
       url: container-instances-multi-container-yaml.md
     - text: 部署容器组 - ARM 模板
       url: container-instances-multi-container-group.md
+    - text: 部署容器组 - Docker Compose
+      url: tutorial-docker-compose.md
 - title: 部署方案
   linkLists:
   - linkListType: how-to-guide
