--- a/articles/iot-dps/toc.yml
+++ b/articles/iot-dps/toc.yml
@@ -15,40 +15,52 @@
           href: quick-setup-auto-provision-cli.md
         - name: Azure RM 模板
           href: quick-setup-auto-provision-rm.md
-    - name: 预配单个设备
+    - name: 预配对称密钥设备
       items:
-        - name: 对称密钥证明
-          items:
-            - name: C
-              href: quick-create-simulated-device-symm-key.md
-            - name: Java
-              href: quick-create-simulated-device-symmetric-key-java.md
-            - name: Python
-              href: quick-create-device-symmetric-key-python.md
-        - name: X.509 证书证明
-          items:
-            - name: C
-              href: quick-create-simulated-device-x509.md
-            - name: Java
-              href: quick-create-simulated-device-x509-java.md
-            - name: C#
-              href: quick-create-simulated-device-x509-csharp.md
-            - name: Node.js
-              href: quick-create-simulated-device-x509-node.md
-            - name: Python
-              href: quick-create-simulated-device-x509-python.md
-        - name: 模拟 TPM 设备证明
-          items:
-            - name: C
-              href: quick-create-simulated-device.md
-            - name: Java
-              href: quick-create-simulated-device-tpm-java.md
-            - name: C#
-              href: quick-create-simulated-device-tpm-csharp.md
-            - name: Node.js
-              href: quick-create-simulated-device-tpm-node.md
-            - name: Python
-              href: quick-create-simulated-device-tpm-python.md
+        - name: C
+          href: quick-create-simulated-device-symm-key.md
+        - name: Java
+          href: quick-create-simulated-device-symmetric-key-java.md
+        - name: Python
+          href: quick-create-device-symmetric-key-python.md
+    - name: 预配 x.509 证书设备
+      items:
+        - name: C
+          href: quick-create-simulated-device-x509.md
+        - name: Java
+          href: quick-create-simulated-device-x509-java.md
+        - name: C#
+          href: quick-create-simulated-device-x509-csharp.md
+        - name: Node.js
+          href: quick-create-simulated-device-x509-node.md
+        - name: Python
+          href: quick-create-simulated-device-x509-python.md
+- name: 教程
+  items:
+    - name: 1 - 预配具有注册组的设备集
+      href: how-to-legacy-device-symm-key.md
+    - name: 2 - 将设备预配到多个中心
+      items:
+        - name: 将多个中心链接到 DPS
+          href: tutorial-provision-multiple-hubs.md
+        - name: 多租户的预配
+          href: how-to-provision-multitenant.md
+        - name: 使用自定义分配策略
+          href: how-to-use-custom-allocation-policies.md
+- name: 示例
+  items:
+    - name: 模拟 TPM 设备证明示例
+      items:
+        - name: C
+          href: quick-create-simulated-device.md
+        - name: Java
+          href: quick-create-simulated-device-tpm-java.md
+        - name: C#
+          href: quick-create-simulated-device-tpm-csharp.md
+        - name: Node.js
+          href: quick-create-simulated-device-tpm-node.md
+        - name: Python
+          href: quick-create-simulated-device-tpm-python.md
     - name: 使用 DPS API 创建设备注册
       items:
         - name: 使用 X.509 证书证明进行组注册
@@ -71,51 +83,33 @@
               href: quick-enroll-device-tpm-node.md
             - name: Python
               href: quick-enroll-device-tpm-python.md
-- name: 教程
-  items:
-    - name: 1 - 设置云资源
-      href: tutorial-set-up-cloud.md
-    - name: 2 - 设置设备
-      href: tutorial-set-up-device.md
-    - name: 3 - 将设备预配到 IoT 中心
-      items:
-        - name: C
-          href: tutorial-provision-device-to-hub.md
-        - name: C#
-          href: tutorial-net-provision-device-to-hub.md
-    - name: 4 - 将设备预配到多个中心
-      href: tutorial-provision-multiple-hubs.md
-    - name: 5 - 设置组注册
-      href: tutorial-group-enrollments.md
 - name: 概念
   items:
-    - name: 自动预配
-      href: concepts-auto-provisioning.md
-    - name: 重新预配
-      href: concepts-device-reprovision.md
-    - name: 设备
-      href: concepts-device.md
-    - name: 安全性
-      href: concepts-security.md
-    - name: TLS 支持
-      href: tls-support.md
-    - name: 虚拟网络支持
-      href: virtual-network-support.md
-    - name: 服务
+    - name: DPS 术语
       href: concepts-service.md
-    - name: 了解 DPS IP 地址
-      href: iot-dps-understand-ip-address.md
-    - name: TPM 证明
-      href: concepts-tpm-attestation.md
     - name: 对称密钥证明
       href: concepts-symmetric-key-attestation.md
+    - name: X.509 证书证明
+      href: concepts-x509-attestation.md
+    - name: TPM 证明
+      href: concepts-tpm-attestation.md
+    - name: 角色和操作
+      href: concepts-roles-operations.md
+    - name: 虚拟网络支持
+      href: virtual-network-support.md
+    - name: 重新预配
+      href: concepts-device-reprovision.md
+    - name: 了解 DPS IP 地址
+      href: iot-dps-understand-ip-address.md
+    - name: TLS 支持
+      href: tls-support.md
     - name: 设备制造商的安全实践
       href: concepts-device-oem-security-practices.md
 - name: 操作指南
   items:
     - name: 将 MXChip IoT DevKit 连接到 IoT 中心
       href: how-to-connect-mxchip-iot-devkit.md
-    - name: 管理设备预配服务配置
+    - name: 管理设备预配服务
       items:
         - name: 管理注册 - 门户
           href: how-to-manage-enrollments.md
@@ -131,14 +125,12 @@
           href: how-to-revoke-device-access-portal.md
         - name: 管理取消预配
           href: how-to-unprovision-devices.md
-    - name: 管理设备预配服务
-      items:
-        - name: 使用 Azure CLI 配置设备预配服务
-          href: how-to-manage-dps-with-cli.md
         - name: 控制对预配服务 API 的访问
           href: how-to-control-access.md
         - name: 配置 IP 筛选
           href: iot-dps-ip-filtering.md
+        - name: 使用 Azure CLI 配置设备预配服务
+          href: how-to-manage-dps-with-cli.md
     - name: 预配 IoT Edge 设备
       items:
         - name: Linux
@@ -149,12 +141,6 @@
           maintainContext: true
     - name: 将证明机制与 SDK 配合使用
       href: use-hsm-with-sdk.md
-    - name: 多租户的预配
-      href: how-to-provision-multitenant.md
-    - name: 使用自定义分配策略
-      href: how-to-use-custom-allocation-policies.md
-    - name: 将对称密钥与旧设备配合使用
-      href: how-to-legacy-device-symm-key.md
     - name: 使用 SDK 工具进行开发
       href: how-to-use-sdk-tools.md
     - name: 如何从设备发送更多数据
