--- a/articles/virtual-machine-scale-sets/TOC.yml
+++ b/articles/virtual-machine-scale-sets/TOC.yml
@@ -175,7 +175,7 @@
         - name: 选择磁盘类型
           href: ../virtual-machines/disks-types.md
           maintainContext: true
-        - name: Encryption
+        - name: 加密
           href: ../virtual-machines/windows/disk-encryption.md?toc=%2fazure%2fvirtual-machine-scale-sets%2ftoc.json
           maintainContext: true
         - name: 高级存储性能
@@ -340,8 +340,16 @@
           href: virtual-machine-scale-sets-upgrade-scale-set.md
         - name: 规模集网络
           href: virtual-machine-scale-sets-networking.md
-        - name: 自动 OS 升级
-          href: virtual-machine-scale-sets-automatic-upgrade.md
+        - name: OS 映像升级
+          items:
+            - name: 自动 OS 升级
+              href: virtual-machine-scale-sets-automatic-upgrade.md
+            - name: 维护控制
+              items:
+                - name: 概览（预览）
+                  href: ../virtual-machines/virtual-machine-scale-sets-maintenance-control.md
+                - name: PowerShell（预览版）
+                  href: ../virtual-machines/virtual-machine-scale-sets-maintenance-control-powershell.md
         - name: 自动实例修复
           href: virtual-machine-scale-sets-automatic-instance-repairs.md
         - name: 实例保护
