--- a/articles/active-directory/saas-apps/toc.yml
+++ b/articles/active-directory/saas-apps/toc.yml
@@ -5,7 +5,7 @@
   items:
     - name: 0 - 9
       items:
-        - name: '10,000ft Plans'
+        - name: '10,000 ft 计划'
           href: 10000ftplans-tutorial.md
         - name: 123FormBuilder
           href: 123formbuilder-tutorial.md
@@ -1924,6 +1924,10 @@
           href: airstack-provisioning-tutorial.md
         - name: Amazon Web Services (AWS) - 角色预配
           href: amazon-web-service-tutorial.md#configure-azure-ad-sso
+        - name: Apple Business Manager
+          href: apple-business-manager-provision-tutorial.md
+        - name: Apple School Manager
+          href: apple-school-manager-provision-tutorial.md
         - name: Asana
           href: asana-provisioning-tutorial.md
         - name: Atlassian Cloud
@@ -1946,6 +1950,8 @@
           href: cernercentral-provisioning-tutorial.md
         - name: Cisco Webex
           href: cisco-webex-provisioning-tutorial.md
+        - name: Cofense Recipient Sync
+          href: cofense-provision-tutorial.md
         - name: Comeet Recruiting Software
           href: comeet-recruiting-software-provisioning-tutorial.md
         - name: Concur
@@ -2030,6 +2036,8 @@
           href: mindtickle-provisioning-tutorial.md
         - name: Miro
           href: miro-provisioning-tutorial.md
+        - name: myday
+          href: myday-provision-tutorial.md
     - name: N - Z
       items:
         - name: Netskope 管理员控制台
