--- a/articles/databox-online/index.yml
+++ b/articles/databox-online/index.yml
@@ -1,9 +1,9 @@
 ### YamlMime:Landing
 title: Azure Stack Edge 和 Azure Data Box Gateway 文档 - 联机传输
-summary: 使用 Azure Data Box Gateway 和 Azure Stack Edge 设备通过网络进行高性能数据传输。 选择 Data Box Gateway 发送数据，以便进行云存档、灾难恢复，或者处理云规模的数据。 在数据移动到 Azure 之前，使用 Azure Stack Edge 可对其进行筛选、分析和转换。 Azure Data Box Edge 最近已更名为 Azure Stack Edge。
+summary: 使用 Azure Stack Edge 和 Azure Data Box Gateway 设备，通过网络进行高性能数据传输。 在将数据移动到 Azure 之前，使用配备了计算加速硬件的 Azure Stack Edge Pro 设备来筛选、分析和转换数据。 选择 Data Box Gateway 发送数据，以便进行云存档、灾难恢复，或者处理云规模的数据。
 metadata:
   title: Azure Stack Edge 和 Azure Data Box Gateway 文档 - 联机传输
-  description: 介绍如何通过网络向 Azure 进行高性能数据传输的 Data Box Gateway 和 Azure Stack Edge（已更名的 Data Box Edge）文档。
+  description: 介绍如何通过网络向 Azure 进行高性能数据传输的 Data Box Gateway 和 Azure Stack Edge 文档。
   services: databox
   ms.service: databox
   ms.subservice: edge
@@ -11,22 +11,28 @@ metadata:
   ms.collection: collection
   author: alkohli
   ms.author: alkohli
-  ms.date: 11/04/2019
-  ms.openlocfilehash: bf4f5d7589bdf9ae9b456f7dbe24c8d5fc02afaf
-  ms.sourcegitcommit: 856db17a4209927812bcbf30a66b14ee7c1ac777
+  ms.date: 09/08/2020
+  ms.openlocfilehash: 2995a94f1b56144afd191bc3e8eb97c2da4593ef
+  ms.sourcegitcommit: 53acd9895a4a395efa6d7cd41d7f78e392b9cfbe
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 04/29/2020
-  ms.locfileid: "82562349"
+  ms.lasthandoff: 09/22/2020
+  ms.locfileid: "90902998"
 landingContent:
 - title: 关于 Azure Stack Edge 和 Data Box Gateway
   linkLists:
   - linkListType: overview
     links:
+    - text: 什么是 Azure Stack Edge Pro GPU？
+      url: azure-stack-edge-gpu-overview.md
+    - text: 什么是 Azure Stack Edge Pro FPGA？
+      url: azure-stack-edge-overview.md
+    - text: 什么是 Azure Stack Edge R？
+      url: azure-stack-edge-j-series-overview.md
+    - text: 什么是 Azure Stack Edge Mini？
+      url: azure-stack-edge-k-series-overview.md
     - text: 什么是 Data Box Gateway？
       url: data-box-gateway-overview.md
-    - text: 什么是 Azure Stack Edge？
-      url: azure-stack-edge-overview.md
   - linkListType: architecture
     links:
     - text: 选择 Azure 数据传输选项
@@ -35,28 +41,36 @@ landingContent:
       url: /azure/storage/common/storage-solution-large-dataset-low-network#offline-transfer-or-network-transfer
   - linkListType: whats-new
     links:
-    - text: 1905 发行说明
-      url: data-box-gateway-1905-release-notes.md
+    - text: 2009 发行说明
+      url: azure-stack-edge-gpu-2008-release-notes.md
 - title: 要求和限制
   linkLists:
   - linkListType: concept
     links:
+    - text: Azure Stack Edge Pro GPU 要求
+      url: azure-stack-edge-gpu-system-requirements.md
+    - text: Azure Stack Edge Pro FPGA 要求
+      url: azure-stack-edge-gpu-system-requirements.md
     - text: Data Box Gateway 要求
       url: data-box-gateway-system-requirements.md
-    - text: Azure Stack Edge 要求
-      url: azure-stack-edge-system-requirements.md
+    - text: Azure Stack Edge Pro 限制
+      url: azure-stack-edge-limits.md
     - text: Data Box Gateway 限制
       url: data-box-gateway-limits.md
-    - text: Azure Stack Edge 限制
-      url: azure-stack-edge-limits.md
 - title: 部署
   linkLists:
   - linkListType: tutorial
     links:
+    - text: 查看部署前清单
+      url: azure-stack-edge-gpu-deploy-checklist.md
+    - text: Azure Stack Edge Pro GPU
+      url: azure-stack-edge-gpu-deploy-prep.md
     - text: Data Box Gateway
       url: data-box-gateway-deploy-prep.md
-    - text: Azure Stack Edge
-      url: azure-stack-edge-deploy-prep.md
+    - text: 通过市场的 GPU 模块
+      url: azure-stack-edge-gpu-deploy-sample-module-marketplace.md
+    - text: 通过 IoT Edge 传输 Kubernetes 工作负载
+      url: azure-stack-edge-gpu-deploy-stateless-application-iot-edge-module.md
 - title: 开发
   linkLists:
   - linkListType: how-to-guide
@@ -65,31 +79,31 @@ landingContent:
       url: azure-stack-edge-create-iot-edge-module.md
   - linkListType: download
     links:
-    - text: 示例 - 用于 Azure Stack Edge 的 C#
+    - text: 示例 - 用于 Azure Stack Edge Pro GPU 的 C#
       url: https://docs.microsoft.com/samples/azure-samples/data-box-edge-csharp-modules/data-box-edge-csharp-modules/
 - title: 管理
   linkLists:
   - linkListType: how-to-guide
     links:
+    - text: Azure Stack Edge Pro 共享
+      url: azure-stack-edge-manage-shares.md
     - text: Data Box Gateway 共享
       url: data-box-gateway-manage-shares.md
-    - text: Azure Stack Edge 共享
-      url: azure-stack-edge-manage-shares.md
     - text: Edge 计算
       url: azure-stack-edge-manage-compute.md
-    - text: Edge 计算网络
-      url: azure-stack-edge-extend-compute-access-modules.md
+    - text: Edge 存储帐户
+      url: azure-stack-edge-j-series-manage-storage-accounts.md
 - title: 故障排除
   linkLists:
   - linkListType: how-to-guide
     links:
+    - text: Azure Stack Edge GPU
+      url: azure-stack-edge-gpu-troubleshoot.md
     - text: Data Box Gateway
       url: data-box-gateway-troubleshoot.md
-    - text: Azure Stack Edge
-      url: azure-stack-edge-troubleshoot.md
     - text: Edge 计算模块
-      url: azure-stack-edge-connect-powershell-interface.md#monitor-and-troubleshoot-compute-modules
-    - text: 返回或替换 Azure Stack Edge
+      url: azure-stack-edge-gpu-connect-powershell-interface.md#debug-kubernetes-issues-related-to-iot-edge
+    - text: 返回 Azure Stack Edge GPU
       url: azure-stack-edge-return-device.md
     - text: 创建支持票证
       url: azure-stack-edge-contact-microsoft-support.md
