commit translated contents

--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -417,7 +417,7 @@
                   items:
                     - name: 虚拟机
                       href: platform/collect-custom-metrics-guestos-resource-manager-vm.md
-                    - name: VM 规模集
+                    - name: 虚拟机规模集
                       href: platform/collect-custom-metrics-guestos-resource-manager-vmss.md
                     - name: VM 经典
                       href: platform/collect-custom-metrics-guestos-vm-classic.md
@@ -467,9 +467,9 @@
           href: platform/autoscale-common-scale-patterns.md
         - name: 使用自定义指标缩放
           href: platform/autoscale-custom-metric.md
-        - name: 缩放 VM 规模集
+        - name: 缩放虚拟机规模集
           href: ../virtual-machine-scale-sets/tutorial-autoscale-powershell.md?toc=/azure/azure-monitor/toc.json
-        - name: 使用资源管理器模板缩放 VM 规模集
+        - name: 使用资源管理器模板缩放虚拟机规模集
           href: platform/autoscale-virtual-machine-scale-sets.md
         - name: 使用 Webhook 和电子邮件通知
           href: platform/autoscale-webhook-email.md
@@ -636,7 +636,7 @@
                 - name: Spring Boot 应用
                   displayname: java
                   href: /java/azure/spring-framework/configure-spring-boot-java-applicationinsights
-                - name: 故障排除
+                - name: 疑难解答
                   href: app/java-troubleshoot.md
             - name: Node.js
               href: app/nodejs.md
@@ -677,7 +677,7 @@
           items:
             - name: 概述
               href: app/codeless-overview.md
-            - name: Azure VM 和规模集
+            - name: Azure VM 和虚拟机规模集
               href: app/azure-vm-vmss-apps.md
             - name: Azure 应用服务
               displayname: 'App Service, web app, PaaS, Azure web app'
@@ -728,6 +728,8 @@
           href: app/create-new-resource.md
         - name: 创建资源（基于工作区）
           href: app/create-workspace-resource.md
+        - name: 迁移到基于工作区的资源
+          href: app/convert-classic-resource.md
         - name: 应用程序仪表板
           displayname: 'dashboard, Application Insights dashboard'
           href: app/overview-dashboard.md
@@ -1010,8 +1012,6 @@
               href: insights/container-insights-region-mapping.md
         - name: 监视性能
           href: insights/container-insights-analyze.md
-        - name: 监视运行状况
-          href: insights/container-insights-health.md
         - name: 监视 GPU 性能
           href: insights/container-insights-gpu-monitoring.md
         - name: 监视部署和 HPA
@@ -1042,8 +1042,6 @@
           href: insights/container-insights-agent-config.md
         - name: 更新以启用指标
           href: insights/container-insights-update-metrics.md
-        - name: 运行状况监视配置
-          href: insights/container-insights-health-monitors-config.md
         - name: 管理成本和使用情况
           href: insights/container-insights-cost.md
         - name: 禁用监视
