--- a/articles/mysql/index.yml
+++ b/articles/mysql/index.yml
@@ -1,19 +1,19 @@
 ### YamlMime:Landing
 title: Azure Database for MySQL 文档
-summary: Azure Database for MySQL 是一种由 MySQL 社区版提供支持的关系数据库服务。  它是完全托管的数据库即服务产品，能够处理任务关键型工作负荷，并提供可预测的性能和动态可伸缩性。 利用所选的开源工具和平台开发包含 Azure Database for MySQL 的应用程序。 参考我们的快速入门、教程和示例了解如何使用用于 MySQL 的 Azure 数据库。
+summary: Azure Database for MySQL 是由 MySQL 社区版提供支持的关系数据库服务。你可以使用单服务器或灵活服务器（预览版）在 Azure 中托管 MySQL 数据库。 它是完全托管的数据库即服务产品，能够处理任务关键型工作负荷，并提供可预测的性能和动态可伸缩性。
 metadata:
-  description: Azure Database for MySQL 是 Microsoft 云中的关系数据库服务，它专为开发人员而构建，由 MySQL 社区版提供支持。
+  description: Azure Database for MySQL 是 Microsoft 云中的关系数据库服务，它专为开发人员而构建，由 MySQL 社区版提供支持。 你可以选择单服务器或灵活服务器（预览版）在 Azure 中部署 MySQL 数据库。
   author: ajlam
   ms.author: andrela
   ms.date: 09/03/2019
   ms.service: mysql
   ms.topic: landing-page
-  ms.openlocfilehash: 2d01ffea7a570eb2f8af203dd1db8777661dc7df
-  ms.sourcegitcommit: 2ffa5bae1545c660d6f3b62f31c4efa69c1e957f
+  ms.openlocfilehash: 03deaa446b7db7790f751f226cb788faf9ebc2a7
+  ms.sourcegitcommit: 53acd9895a4a395efa6d7cd41d7f78e392b9cfbe
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/11/2020
-  ms.locfileid: "88078455"
+  ms.lasthandoff: 09/22/2020
+  ms.locfileid: "90903967"
 landingContent:
 - title: 关于 Azure Database for MySQL
   linkLists:
@@ -21,125 +21,131 @@ landingContent:
     links:
     - text: 什么是用于 MySQL 的 Azure 数据库？
       url: overview.md
+    - text: 选择适当的 MySQL 选项
+      url: select-right-deployment-type.md
   - linkListType: whats-new
     links:
     - text: 查看我们的博客
       url: https://techcommunity.microsoft.com/t5/Azure-Database-for-MySQL/bg-p/ADforMySQL
-- title: 创建服务器
+- title: 单台服务器
   linkLists:
+  - linkListType: overview
+    links:
+    - text: 什么是单服务器？
+      url: single-server-overview.md
+    - text: 查看所有单服务器文档
+      url: single-server/index.yml
+  - linkListType: concept
+    links:
+    - text: 了解定价层
+      url: concepts-pricing-tiers.md
+    - text: 了解支持的 MySQL 版本
+      url: concepts-supported-versions.md
   - linkListType: quickstart
     links:
     - text: 使用 Azure 门户创建服务器
       url: quickstart-create-mysql-server-database-using-azure-portal.md
     - text: 使用 Azure CLI 创建服务器
       url: quickstart-create-mysql-server-database-using-azure-cli.md
+- title: 灵活服务器（预览版）
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: 什么是灵活服务器？
+      url: flexible-server/overview.md
+    - text: 查看所有灵活服务器文档
+      url: flexible-server/index.yml
   - linkListType: concept
     links:
-    - text: 了解定价层
-      url: concepts-pricing-tiers.md
-    - text: 了解限制
-      url: concepts-limits.md
-    - text: 了解支持的 MySQL 版本
-      url: concepts-supported-versions.md
-    - text: 配置服务器参数
-      url: howto-server-parameters.md
-    - text: 高可用性规划
-      url: concepts-high-availability.md
-  - linkListType: tutorial
+    - text: 服务器概念
+      url: flexible-server/concept-servers.md
+    - text: 了解计算和存储
+      url: flexible-server/concepts-compute-storage.md
+    - text: 限制
+      url: flexible-server/concepts-limitations.md
+  - linkListType: quickstart
     links:
-    - text: 使用 Azure 门户设计数据库
-      url: tutorial-design-database-using-portal.md
-    - text: 使用 Azure CLI 设计数据库
-      url: tutorial-design-database-using-cli.md
-    - text: 在容器中部署 Wordpress
-      url: ../app-service/tutorial-multi-container-app.md?toc=%2fazure%2fmysql%2ftoc.json&bc=%2Fazure%2Fbread%2Ftoc.json
-    - text: 在 Azure CLI 中使用 PHP 构建 Web 应用
-      url: ../app-service/tutorial-php-mysql-app.md?toc=%2fazure%2fmysql%2ftoc.json&bc=%2Fazure%2Fbread%2Ftoc.json
-- title: 备份和迁移数据
+    - text: 使用门户创建服务器
+      url: flexible-server/quickstart-create-server-portal.md
+    - text: 使用 CLI 创建服务器
+      url: flexible-server/quickstart-create-server-cli.md
+- title: 连接和查询
+  linkLists:
+  - linkListType: how-to-guide
+    links:
+    - text: 连接和查询参考指南
+      url: how-to-connect-overview-single-server.md
+  - linkListType: quickstart
+    links:
+    - text: 使用 MySQL Workbench 连接到单服务器
+      url: connect-workbench.md
+    - text: 使用 Java 连接到单服务器
+      url: connect-java.md
+    - text: 使用 PHP 连接到单服务器
+      url: connect-php.md
+    - text: 使用 MySQL Workbench 连接到灵活服务器
+      url: connect-workbench.md
+    - text: 使用 PHP 连接到灵活服务器
+      url: flexible-server/connect-php.md
+    - text: 使用 Python 连接到灵活服务器
+      url: flexible-server/connect-python.md
+- title: 管理并迁移数据
   linkLists:
   - linkListType: concept
     links:
-    - text: 备份和还原
-      url: concepts-backup.md
+    - text: 使用 Azure 门户管理单服务器
+      url: howto-create-manage-server-portal.md
+    - text: 使用 Azure 门户管理灵活服务器（预览版）
+      url: flexible-server/how-to-manage-server-portal.md
     - text: 使用转储和还原进行迁移
       url: concepts-migrate-dump-restore.md
     - text: 使用导入和导出进行迁移
       url: concepts-migrate-import-export.md
   - linkListType: how-to-guide
     links:
-    - text: 使用 Azure 门户还原服务器
-      url: howto-restore-server-portal.md
-    - text: 使用 Azure CLI 还原服务器
-      url: howto-restore-server-cli.md
-    - text: 停机时间最短的迁移
+    - text: 使用数据迁移服务进行迁移
       url: howto-migrate-online.md
-- title: 连接到 Azure Database for MySQL
+    - text: Azure 数据迁移指南
+      url: https://datamigration.microsoft.com/scenario/mysql-to-azuremysql?step=1
+- title: 应用程序开发
   linkLists:
   - linkListType: concept
     links:
-    - text: 了解防火墙
-      url: concepts-firewall-rules.md
-    - text: 了解 SSL
-      url: concepts-ssl-connection-security.md
-    - text: 了解虚拟网络
-      url: concepts-data-access-and-security-vnet.md
-  - linkListType: how-to-guide
+    - text: 连接复原
+      url: concepts-connectivity.md
+    - text: 最佳做法
+      url: app-development-best-practices.md
+    - text: 兼容的驱动程序和工具
+      url: concepts-compatibility.md
+  - linkListType: tutorial
     links:
-    - text: 创建防火墙规则
-      url: howto-manage-firewall-using-portal.md
-    - text: 配置 SSL 连接
-      url: howto-configure-ssl.md
-    - text: 连接现有 Azure 应用服务
-      url: howto-connect-webapp.md
-    - text: 连接字符串
-      url: howto-connection-string.md
-    - text: 排查连接问题
-      url: howto-troubleshoot-common-connection-issues.md
-  - linkListType: get-started
-    links:
-    - text: 使用 MySQL Workbench 进行连接
-      url: connect-workbench.md
-    - text: 使用 PHP 进行连接
-      url: connect-php.md
-    - text: 使用 Java 进行连接
-      url: connect-java.md
-    - text: 使用 .Net 进行连接
-      url: connect-csharp.md
-    - text: 使用 Python 进行连接
-      url: connect-python.md
-    - text: 使用 Node.js 进行连接
-      url: connect-nodejs.md
-    - text: 使用 Ruby 进行连接
-      url: connect-ruby.md
-    - text: 使用 C++ 进行连接
-      url: connect-cpp.md
-    - text: 使用 Go 进行连接
-      url: connect-go.md
-- title: 复制数据
+    - text: 在单服务器上设计数据库
+      url: tutorial-design-database-using-portal.md
+    - text: 使用 VNET 中的灵活服务器创建 Web 应用
+      url: flexible-server/tutorial-webapp-server-vnet.md
+    - text: 使用灵活服务器构建 PHP (Laravel) Web 应用
+      url: flexible-server/tutorial-php-database-app.md
+    - text: 使用单服务器构建 PHP (Laravel) Web 应用
+      url: ../app-service/tutorial-php-mysql-app.md?toc=%2fazure%2fmysql%2ftoc.json&bc=%2Fazure%2Fbread%2Ftoc.json
+- title: 参考
   linkLists:
-  - linkListType: concept
+  - linkListType: download
     links:
-    - text: 了解复制中数据
-      url: concepts-data-in-replication.md
-    - text: 了解只读副本
-      url: concepts-read-replicas.md
-  - linkListType: how-to-guide
-    links:
-    - text: 配置复制中数据
-      url: howto-data-in-replication.md
-    - text: 使用 Azure 门户创建只读副本
-      url: howto-read-replicas-portal.md
-- title: 使用编程 API 编写代码
-  linkLists:
-  - linkListType: get-started
+    - text: MySQL Workbench
+      url: https://www.mysql.com/products/workbench
+    - text: MySQL .NET 连接器
+      url: https://dev.mysql.com/doc/connector-net/en/
+  - linkListType: deploy
     links:
     - text: 用于常见任务的 Azure CLI 脚本
       url: /azure/mysql/sample-scripts-azure-cli
+    - text: Azure 资源管理器模板
+      url: /azure/templates/microsoft.dbformysql/allversions
   - linkListType: reference
     links:
     - text: Azure CLI 开发人员参考
       url: /cli/azure/mysql
     - text: REST API 开发人员参考
       url: /rest/api/mysql/
-    - text: Azure 资源管理器模板
-      url: /azure/templates/microsoft.dbformysql/allversions
+    - text: PowerShell
+      url: https://docs.microsoft.com/powershell/module/az.mysql
