--- a/articles/media-services/live-video-analytics-edge/toc.yml
+++ b/articles/media-services/live-video-analytics-edge/toc.yml
@@ -51,6 +51,10 @@
         - name: 通过 HTTP 扩展使用 OVMS
           displayName: 'intel, OpenVINO'
           href: use-intel-openvino-tutorial.md
+        - name: 使用自定义视觉
+          href: custom-vision-tutorial.md
+        - name: 使用空间分析
+          href: spatial-analysis-tutorial.md
 - name: 示例
   items:
     - name: C# 直接方法示例
@@ -89,7 +93,9 @@
       href: manage-recording-policy-how-to.md
     - name: 通过门户调用直接方法
       href: use-azure-portal-to-invoke-direct-methods.md
-    - name: 故障排除
+    - name: 在 Azure Stack Edge 上部署
+      href: deploy-azure-stack-edge-how-to.md
+    - name: 疑难解答
       href: troubleshoot-how-to.md
 - name: 参考
   items:
