--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -955,6 +955,8 @@
               href: add-disk.md
             - name: Azure 门户
               href: attach-disk-portal.md
+        - name: 更改磁盘层
+          href: ../disks-performance-tiers.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
         - name: 分离磁盘
           href: detach-disk.md
         - name: 使用 ARM 模板部署磁盘
