--- a/articles/vpn-gateway/TOC.yml
+++ b/articles/vpn-gateway/TOC.yml
@@ -92,8 +92,12 @@
           href: vpn-gateway-howto-multi-site-to-site-resource-manager-portal.md
         - name: 连接到多个基于策略的 VPN 设备
           href: vpn-gateway-connect-multiple-policybased-rm-ps.md
-        - name: 站点到站点和 ExpressRoute 的共存连接
+    - name: 采用 ExpressRoute 连接的站点到站点连接
+      items:
+        - name: 现有连接
           href: ../expressroute/expressroute-howto-coexist-resource-manager.md?toc=%2fazure%2fvpn-gateway%2ftoc.json
+        - name: 通过专用对等互连的 VPN
+          href: site-to-site-vpn-private-peering.md
     - name: VNet 到 VNet 连接
       items:
         - name: 配置 VNet 到 VNet 连接
@@ -134,6 +138,8 @@
               href: point-to-site-how-to-vpn-client-install-azure-cert.md
             - name: 创建和安装 VPN 客户端配置文件
               href: point-to-site-vpn-client-configuration-azure-cert.md
+            - name: 会话管理
+              href: p2s-session-management.md
         - name: RADIUS 身份验证
           items:
             - name: 配置 P2S VPN
